# typedb-driver

./: .bazelignore  .bazelrc  .clang-format  .eslintignore  .eslintrc  .gitattributes  .gitignore  .npmignore  BUILD  BZLMOD_MIGRATION_STATUS.md  CLAUDE.md  Cargo.toml  Grakn.java  Grakn.ts  GraknBase.java  GraknClient.java  GraknClient.ts  GraknClientImpl.java  GraknOptions.java  GraknOptions.ts  GraknProtoBuilder.java  GraknProtoBuilder.ts  Keyspace.java  Keyspaces.java  LICENSE  MODULE.bazel  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  Session.java  Transaction.java  TypeDB.java  TypeDB.ts  VERSION  WORKSPACE  csharp-driver-3.0-plan.md  database.rs  database_manager.rs  dependencies_internal.ts  deployment.bzl  (+11 more)
.circleci/: config.yml
.factory/: automation.yml  test-cloud.sh  test-cluster.sh  test-community.sh  test-core.sh  test-enterprise.sh
.github/: CODEOWNERS
.grabl/: automation.yml  test-cluster.sh  test-core.sh
answer/: Answer.java  AnswerGroup.java  AnswerMessageReader.java  ConceptList.java  ConceptMap.java  ConceptSet.java  ConceptSetMeasure.java  Explanation.java  Numeric.java  Void.java
api/: BUILD  Client.java  GraknClient.java  GraknClient.ts  GraknOptions.java  GraknOptions.ts  GraknSession.java  GraknSession.ts  GraknTransaction.java  GraknTransaction.ts  Session.java  Transaction.java  TypeDBClient.java  TypeDBClient.ts  TypeDBConnection.java  TypeDBCredential.java  TypeDBOptions.java  TypeDBOptions.ts  TypeDBSession.java  TypeDBTransaction.java  TypeDBTransaction.ts
c/: BUILD  Cargo.toml  README.md  cbindgen.toml  docs_structure.bzl  example.c  typedb_driver.h  typedb_driver.i
c/tests/assembly/: BUILD  CMakeLists.txt  test.c
cluster/: BUILD  ClusterClient.java  ClusterClient.ts  ClusterDatabase.java  ClusterDatabase.ts  ClusterDatabaseManager.java  ClusterDatabaseManager.ts  ClusterNodeClient.java  ClusterServerClient.java  ClusterSession.java  ClusterSession.ts  ClusterUser.java  ClusterUserManager.java  FailsafeTask.java  FailsafeTask.ts
common/: BUILD  BlockingQueue.ts  ErrorMessage.java  Exceptions.ts  GraknClientException.java  GraknStub.java  Label.java  Label.ts  NativeObject.java  Proto.java  ProtoBuilder.java  ProtoBuilder.ts  RequestBuilder.java  ResilientStub.java  RpcMessageWriter.java  error.rs  mod.rs  utils.ts
concept/: Attribute.java  AttributeImpl.java  AttributeType.java  AttributeTypeImpl.java  BUILD  Concept.java  Concept.ts  ConceptIID.java  ConceptId.java  ConceptImpl.java  ConceptImpl.ts  ConceptManager.java  ConceptManager.ts  ConceptManagerImpl.java  ConceptManagerImpl.ts  ConceptMessageWriter.java  Concepts.java  DataType.java  Entity.java  EntityImpl.java  EntityType.java  EntityTypeImpl.java  GraknConceptException.java  Label.java  LogicManager.ts  MetaType.java  MetaTypeImpl.java  Relation.java  RelationImpl.java  RelationType.java  RelationTypeImpl.java  RemoteAttribute.java  RemoteAttributeType.java  RemoteConcept.java  RemoteEntity.java  RemoteEntityType.java  RemoteMetaType.java  RemoteRelation.java  RemoteRelationType.java  RemoteRole.java  (+19 more)
concept2/: mod.rs
connection/: BUILD  ConnectionMessageWriter.java  GraknClient.java  GraknConcepts.java  GraknDatabase.java  GraknDatabaseManager.java  GraknSession.java  GraknTransaction.java  GraknTransceiver.java  RpcIterator.java  TypeDBClientImpl.java  TypeDBClientImpl.ts  TypeDBConnectionFactory.java  TypeDBConnectionImpl.java  TypeDBDatabaseImpl.java  TypeDBDatabaseImpl.ts  TypeDBDatabaseManagerImpl.java  TypeDBDatabaseManagerImpl.ts  TypeDBSessionImpl.java  TypeDBSessionImpl.ts  TypeDBStubFactory.ts  TypeDBStubImpl.ts  TypeDBTransactionImpl.java  TypeDBTransactionImpl.ts  database_manager.rs  mod.rs  typedb_client.rs  typedb_database_manager.rs
core/: AbstractClient.java  ActualCoreClient.java  BUILD  CoreClient.java  CoreClient.ts  CoreDatabase.java  CoreDatabase.ts  CoreDatabaseManager.java  CoreDatabaseManager.ts  CoreSession.java  CoreSession.ts  CoreTransaction.java  CoreTransaction.ts  TypeDBClientImpl.java  TypeDBDatabaseImpl.java  TypeDBDatabaseManagerImpl.java  TypeDBSessionImpl.java  TypeDBTransactionImpl.java
cpp/: BUILD  Doxyfile  README.md  build_opts.bzl  docs_structure.bzl
cpp/test/assembly/: BUILD  CMakeLists.txt  test.cpp
csharp/: BUILD  CSHARP-3.0-UPGRADE-STATUS.md  Drivers.cs  Hello.cs  Lib.cs  LibTest.cs  README.md  TypeDB.Driver.NoRuntime.nuspec.template  TypeDB.Driver.Pinvoke.nuspec  TypeDB.Driver.Pinvoke.nuspec.template  TypeDB.Driver.Runtime.nuspec  TypeDB.Driver.nuspec  TypeDB.cs  TypeDBExample.cs  build_opts.bzl  docs_structure.bzl  hello.cs  lib.cs  libtest.cs  paket.csharp_deps.bzl  paket.csharp_deps_extension.bzl  paket.dependencies  regenerate_paket2bazel_files.sh  rules.bzl
database/: TypeDBDatabaseImpl.java  TypeDBDatabaseManagerImpl.java
docs/: antora.yml  deps.sh  package-structure.dot
driver/: pyvenv.cfg
exception/: GraknClientException.java
go/: BUILD  BUILD.bazel  README.md  db_creation_example.go  deps.bzl  driver_eg.go  driver_proof_of_concept.go  go.mod  go_versions.bzl  godogs.go  godogs_test.go  hello-world.go  json_explore.go  rules.bzl
go/Connection/: BUILD  TypeDBDatabaseImpl.go  TypeDBDatabaseManagerImpl.go  TypeDBDriverImpl.go
go/api/: BUILD  TypeDBDriver.go
go/api/database/: BUILD  Database.go  DatabaseManager.go
go/api/user/: BUILD  User.go  UserManager.go
go/connection/: BUILD  TypeDBDatabaseImpl.go  TypeDBDatabaseManagerImpl.go  TypeDBDriverImpl.go
go/features/: BUILD  godogs.feature
go/gazelle/: BUILD  add_dep.sh
go/lib/: BUILD.bazel  hello_lib.go  hello_lib_test.go
go/test/integration/: BUILD  db_connection_test.go
go/user/: BUILD  UserImpl.go  UserManagerImpl.go
http-ts/: BUILD  README.md  concept.ts  database.ts  docs_structure.bzl  index.ts  package.json  params.ts  pnpm-lock.yaml  query-structure.ts  query.ts  response.ts  transaction.ts  tsconfig.json  tsup.config.ts  user.ts
java/: BUILD  README.md  TypeDB.java  TypeDBCloudExample.java  TypeDBCoreExample.java  TypeDBExample.java  core_example  docs_structure.bzl  rules.bzl
logic/: BUILD  Rule.java  (+9 more)
(+4327 files in other folders)
