
[workspace]
	resolver = "2"
	members = ["rust", "rust/tests/behaviour/config", "rust/tests/behaviour/steps", "c"]

	[workspace.dependencies]

		[workspace.dependencies.smol]
			features = []
			version = "1.3.0"
			default-features = false

		[workspace.dependencies.cucumber]
			features = ["default", "macros"]
			version = "0.19.1"
			default-features = false

		[workspace.dependencies.tracing-subscriber]
			features = ["alloc", "ansi", "default", "env-filter", "fmt", "matchers", "nu-ansi-term", "once_cell", "registry", "sharded-slab", "smallvec", "std", "thread_local", "tracing", "tracing-log"]
			version = "0.3.23"
			default-features = false

		[workspace.dependencies.itertools]
			features = ["default", "use_alloc", "use_std"]
			version = "0.10.5"
			default-features = false

		[workspace.dependencies.uuid]
			features = ["default", "fast-rng", "rng", "serde", "std", "v4"]
			version = "1.21.0"
			default-features = false

		[workspace.dependencies.rand]
			features = ["alloc", "default", "getrandom", "libc", "rand_chacha", "small_rng", "std", "std_rng"]
			version = "0.8.5"
			default-features = false

		[workspace.dependencies.prost]
			features = ["default", "derive", "prost-derive", "std"]
			version = "0.13.5"
			default-features = false

		[workspace.dependencies.chrono-tz]
			features = ["case-insensitive", "default", "std"]
			version = "0.9.0"
			default-features = false

		[workspace.dependencies.tokio]
			features = ["bytes", "default", "fs", "full", "io-std", "io-util", "libc", "macros", "mio", "net", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "time", "tokio-macros"]
			version = "1.51.1"
			default-features = false

		[workspace.dependencies.tracing]
			features = ["attributes", "default", "log", "std", "tracing-attributes"]
			version = "0.1.44"
			default-features = false

		[workspace.dependencies.typedb-protocol]
			features = []
			git = "https://github.com/typedb/typedb-protocol"
			tag = "3.7.1-rc1"
			default-features = false

		[workspace.dependencies.serde]
			features = ["alloc", "default", "derive", "rc", "serde_derive", "std"]
			version = "1.0.228"
			default-features = false

		[workspace.dependencies.tokio-stream]
			features = ["default", "net", "time"]
			version = "0.1.18"
			default-features = false

		[workspace.dependencies.macro_rules_attribute]
			features = ["default"]
			version = "0.2.2"
			default-features = false

		[workspace.dependencies.futures]
			features = ["alloc", "async-await", "default", "executor", "futures-executor", "std", "thread-pool"]
			version = "0.3.32"
			default-features = false

		[workspace.dependencies.steps]
			path = "rust/tests/behaviour/steps"
			features = []
			default-features = false

		[workspace.dependencies.regex]
			features = ["default", "perf", "perf-backtrack", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "perf-onepass", "std", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"]
			version = "1.12.3"
			default-features = false

		[workspace.dependencies.tonic-types]
			features = []
			version = "0.12.3"
			default-features = false

		[workspace.dependencies.async-std]
			features = ["alloc", "async-attributes", "async-channel", "async-global-executor", "async-io", "async-lock", "attributes", "crossbeam-utils", "default", "futures-channel", "futures-core", "futures-io", "futures-lite", "gloo-timers", "kv-log-macro", "log", "memchr", "once_cell", "pin-project-lite", "pin-utils", "slab", "std", "wasm-bindgen-futures"]
			version = "1.13.2"
			default-features = false

		[workspace.dependencies.http]
			features = ["default", "std"]
			version = "1.4.0"
			default-features = false

		[workspace.dependencies.maybe-async]
			features = ["default"]
			version = "0.2.10"
			default-features = false

		[workspace.dependencies.tonic]
			features = ["channel", "codegen", "default", "prost", "router", "server", "tls", "tls-native-roots", "tls-roots", "transport"]
			version = "0.12.3"
			default-features = false

		[workspace.dependencies.typedb-driver]
			path = "rust"
			features = ["sync"]
			default-features = false

		[workspace.dependencies.chrono]
			features = ["alloc", "clock", "default", "iana-time-zone", "js-sys", "now", "oldtime", "serde", "std", "wasm-bindgen", "wasmbind", "winapi", "windows-link"]
			version = "0.4.44"
			default-features = false

		[workspace.dependencies.config]
			path = "rust/tests/behaviour/config"
			features = []
			default-features = false

		[workspace.dependencies.serial_test]
			features = ["async", "default", "futures", "log", "logging"]
			version = "0.9.0"
			default-features = false

		[workspace.dependencies.serde_json]
			features = ["alloc", "default", "indexmap", "preserve_order", "raw_value", "std"]
			version = "1.0.149"
			default-features = false

		[workspace.dependencies.crossbeam]
			features = ["alloc", "crossbeam-channel", "crossbeam-deque", "crossbeam-epoch", "crossbeam-queue", "default", "std"]
			version = "0.8.4"
			default-features = false

