# TODO add apache 2.0 license everywhere

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//go:rules.bzl", "swig_native_go_library")

swig_native_go_library(
    name = "typedb_driver_go_native",
    lib = "//c:typedb_driver_clib_headers",
    package_name= "typedb_driver",
    interface = "//c:typedb_driver.i",
    includes = ["//c:swig/typedb_driver_go.swg"],
    enable_cxx = True,
    visibility = ["//visibility:public"],
)

go_library(
    name = "driver_lib_example",
    srcs = [
        "driver_eg.go",
    ],
    clinkopts = [
        "-L/Users/XXX/typedb-driver/bazel-bin/go", # TODO use relative path. For now use the bazel output path.
        "-ltypedb_driver_go_native",
        "-framework", "CoreFoundation"
        ],
    visibility = ["//visibility:public"],
    deps = ["//go:typedb_driver_go_native"],
    cgo=True
)

go_binary(
    name = "driver_test",
    embed = [":driver_lib_example"],
    visibility = ["//visibility:public"],
)